--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  display: flex;
+  flex-direction: column;
+  width: 100svw;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.Puplist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Avenir Next";
+  border: solid 3px  #ffe9e3;
+  background: #fafafa;
+  padding: 0.5em;
+  margin: 0.5em;
+  color: whitesmoke;
+  border-radius: 5px;
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.PuppyName {
+    width: 90%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 2px #c4c1e0;
+    border-radius: 10px;
+    background: #7c73e6;
+    color: white;
+    font-family: "Avenir Next";
+    margin-bottom: 0.5em;
+    cursor: pointer;
+    user-select: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+.ThePup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Avenir Next";
+  border: solid 3px #7c73e6;
+  background: #c4c1e0;
+  padding: 0.5em;
+  margin: 0.5em;
+  color: whitesmoke;
+  border-radius: 5px;
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
